[package]
name = "majestic-law"
version = "0.1.0"
description = "Majestic Law — оверлей с базой законов Majestic RP"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
